src/tests/snapshots/backer__tests__public_api_test__api_full.snap
---
source: src/tests/public_api_test.rs
expression: public_api
---
pub mod backer
pub mod backer::models
pub enum backer::models::Align
pub backer::models::Align::Bottom
pub backer::models::Align::BottomCenter
pub backer::models::Align::BottomLeading
pub backer::models::Align::BottomTrailing
pub backer::models::Align::CenterCenter
pub backer::models::Align::CenterLeading
pub backer::models::Align::CenterTrailing
pub backer::models::Align::CenterX
pub backer::models::Align::CenterY
pub backer::models::Align::Leading
pub backer::models::Align::Top
pub backer::models::Align::TopCenter
pub backer::models::Align::TopLeading
pub backer::models::Align::TopTrailing
pub backer::models::Align::Trailing
impl core::clone::Clone for backer::models::Align
pub fn backer::models::Align::clone(&self) -> backer::models::Align
impl core::fmt::Debug for backer::models::Align
pub fn backer::models::Align::fmt(&self, f: &mut core::fmt::Formatter<'_>) -> core::fmt::Result
impl core::marker::Copy for backer::models::Align
impl core::marker::Freeze for backer::models::Align
impl core::marker::Send for backer::models::Align
impl core::marker::Sync for backer::models::Align
impl core::marker::Unpin for backer::models::Align
impl core::panic::unwind_safe::RefUnwindSafe for backer::models::Align
impl core::panic::unwind_safe::UnwindSafe for backer::models::Align
impl<T, U> core::convert::Into<U> for backer::models::Align where U: core::convert::From<T>
pub fn backer::models::Align::into(self) -> U
impl<T, U> core::convert::TryFrom<U> for backer::models::Align where U: core::convert::Into<T>
pub type backer::models::Align::Error = core::convert::Infallible
pub fn backer::models::Align::try_from(value: U) -> core::result::Result<T, <T as core::convert::TryFrom<U>>::Error>
impl<T, U> core::convert::TryInto<U> for backer::models::Align where U: core::convert::TryFrom<T>
pub type backer::models::Align::Error = <U as core::convert::TryFrom<T>>::Error
pub fn backer::models::Align::try_into(self) -> core::result::Result<U, <U as core::convert::TryFrom<T>>::Error>
impl<T> alloc::borrow::ToOwned for backer::models::Align where T: core::clone::Clone
pub type backer::models::Align::Owned = T
pub fn backer::models::Align::clone_into(&self, target: &mut T)
pub fn backer::models::Align::to_owned(&self) -> T
impl<T> core::any::Any for backer::models::Align where T: 'static + ?core::marker::Sized
pub fn backer::models::Align::type_id(&self) -> core::any::TypeId
impl<T> core::borrow::Borrow<T> for backer::models::Align where T: ?core::marker::Sized
pub fn backer::models::Align::borrow(&self) -> &T
impl<T> core::borrow::BorrowMut<T> for backer::models::Align where T: ?core::marker::Sized
pub fn backer::models::Align::borrow_mut(&mut self) -> &mut T
impl<T> core::clone::CloneToUninit for backer::models::Align where T: core::clone::Clone
pub unsafe fn backer::models::Align::clone_to_uninit(&self, dst: *mut u8)
impl<T> core::convert::From<T> for backer::models::Align
pub fn backer::models::Align::from(t: T) -> T
pub struct backer::models::Area
pub backer::models::Area::height: f32
pub backer::models::Area::width: f32
pub backer::models::Area::x: f32
pub backer::models::Area::y: f32
impl backer::models::Area
pub fn backer::models::Area::new(x: f32, y: f32, width: f32, height: f32) -> Self
impl core::clone::Clone for backer::models::Area
pub fn backer::models::Area::clone(&self) -> backer::models::Area
impl core::cmp::PartialEq for backer::models::Area
pub fn backer::models::Area::eq(&self, other: &backer::models::Area) -> bool
impl core::default::Default for backer::models::Area
pub fn backer::models::Area::default() -> backer::models::Area
impl core::fmt::Debug for backer::models::Area
pub fn backer::models::Area::fmt(&self, f: &mut core::fmt::Formatter<'_>) -> core::fmt::Result
impl core::marker::Copy for backer::models::Area
impl core::marker::StructuralPartialEq for backer::models::Area
impl core::marker::Freeze for backer::models::Area
impl core::marker::Send for backer::models::Area
impl core::marker::Sync for backer::models::Area
impl core::marker::Unpin for backer::models::Area
impl core::panic::unwind_safe::RefUnwindSafe for backer::models::Area
impl core::panic::unwind_safe::UnwindSafe for backer::models::Area
impl<T, U> core::convert::Into<U> for backer::models::Area where U: core::convert::From<T>
pub fn backer::models::Area::into(self) -> U
impl<T, U> core::convert::TryFrom<U> for backer::models::Area where U: core::convert::Into<T>
pub type backer::models::Area::Error = core::convert::Infallible
pub fn backer::models::Area::try_from(value: U) -> core::result::Result<T, <T as core::convert::TryFrom<U>>::Error>
impl<T, U> core::convert::TryInto<U> for backer::models::Area where U: core::convert::TryFrom<T>
pub type backer::models::Area::Error = <U as core::convert::TryFrom<T>>::Error
pub fn backer::models::Area::try_into(self) -> core::result::Result<U, <U as core::convert::TryFrom<T>>::Error>
impl<T> alloc::borrow::ToOwned for backer::models::Area where T: core::clone::Clone
pub type backer::models::Area::Owned = T
pub fn backer::models::Area::clone_into(&self, target: &mut T)
pub fn backer::models::Area::to_owned(&self) -> T
impl<T> core::any::Any for backer::models::Area where T: 'static + ?core::marker::Sized
pub fn backer::models::Area::type_id(&self) -> core::any::TypeId
impl<T> core::borrow::Borrow<T> for backer::models::Area where T: ?core::marker::Sized
pub fn backer::models::Area::borrow(&self) -> &T
impl<T> core::borrow::BorrowMut<T> for backer::models::Area where T: ?core::marker::Sized
pub fn backer::models::Area::borrow_mut(&mut self) -> &mut T
impl<T> core::clone::CloneToUninit for backer::models::Area where T: core::clone::Clone
pub unsafe fn backer::models::Area::clone_to_uninit(&self, dst: *mut u8)
impl<T> core::convert::From<T> for backer::models::Area
pub fn backer::models::Area::from(t: T) -> T
pub mod backer::nodes
pub fn backer::nodes::area_reader<'nodes, State>(func: impl core::ops::function::Fn(backer::models::Area, &mut State) -> backer::Node<'nodes, State> + 'static) -> backer::Node<'nodes, State>
pub fn backer::nodes::column<'n, State>(elements: alloc::vec::Vec<impl core::convert::Into<backer::Node<'n, State>>>) -> backer::Node<'n, State>
pub fn backer::nodes::column_spaced<'n, State>(spacing: f32, elements: alloc::vec::Vec<impl core::convert::Into<backer::Node<'n, State>>>) -> backer::Node<'n, State>
pub fn backer::nodes::draw<'nodes, State>(drawable_fn: impl core::ops::function::Fn(backer::models::Area, &mut State) + 'static) -> backer::Node<'nodes, State>
pub fn backer::nodes::draw_object<'nodes, State, D>(drawable: impl core::convert::Into<D>) -> backer::Node<'nodes, State> where D: backer::traits::Drawable<State> + 'nodes
pub fn backer::nodes::dynamic<'nodes, State>(func: impl core::ops::function::Fn(&mut State) -> backer::Node<'nodes, State> + 'nodes) -> backer::Node<'nodes, State>
pub fn backer::nodes::empty<'nodes, State>() -> backer::Node<'nodes, State>
pub fn backer::nodes::group<'n, State>(elements: alloc::vec::Vec<impl core::convert::Into<backer::Node<'n, State>>>) -> backer::Node<'n, State>
pub fn backer::nodes::row<'n, State>(elements: alloc::vec::Vec<impl core::convert::Into<backer::Node<'n, State>>>) -> backer::Node<'n, State>
pub fn backer::nodes::row_spaced<'n, State>(spacing: f32, elements: alloc::vec::Vec<impl core::convert::Into<backer::Node<'n, State>>>) -> backer::Node<'n, State>
pub fn backer::nodes::scope<'nodes, State, Scoped: 'nodes>(scope: impl core::ops::function::Fn(&mut State) -> &mut Scoped + 'nodes, node: impl core::convert::Into<backer::Node<'nodes, Scoped>>) -> backer::Node<'nodes, State>
pub fn backer::nodes::scope_owned<'nodes, State, Scoped: 'nodes>(scope: impl core::ops::function::Fn(&mut State) -> Scoped + 'nodes, embed: impl core::ops::function::Fn(&mut State, Scoped) + 'nodes, node: impl core::convert::Into<backer::Node<'nodes, Scoped>>) -> backer::Node<'nodes, State>
pub fn backer::nodes::scope_unwrap<'nodes, State, Scoped: 'nodes>(scope: impl core::ops::function::Fn(&mut State) -> &mut core::option::Option<Scoped> + 'nodes, node: impl core::convert::Into<backer::Node<'nodes, Scoped>>) -> backer::Node<'nodes, State>
pub fn backer::nodes::space<'nodes, State>() -> backer::Node<'nodes, State>
pub fn backer::nodes::stack<'n, State>(elements: alloc::vec::Vec<impl core::convert::Into<backer::Node<'n, State>>>) -> backer::Node<'n, State>
pub mod backer::traits
pub trait backer::traits::Drawable<State>
pub fn backer::traits::Drawable::draw(&mut self, area: backer::models::Area, state: &mut State, visible: bool)
pub struct backer::Layout<'nodes, State>
impl<'nodes, State> backer::Layout<'nodes, State>
pub fn backer::Layout<'nodes, State>::new(tree: backer::Node<'nodes, State>) -> Self
impl<State> backer::Layout<'_, State>
pub fn backer::Layout<'_, State>::draw(&mut self, area: backer::models::Area, state: &mut State)
impl<'nodes, State> core::marker::Freeze for backer::Layout<'nodes, State>
impl<'nodes, State> !core::marker::Send for backer::Layout<'nodes, State>
impl<'nodes, State> !core::marker::Sync for backer::Layout<'nodes, State>
impl<'nodes, State> core::marker::Unpin for backer::Layout<'nodes, State>
impl<'nodes, State> !core::panic::unwind_safe::RefUnwindSafe for backer::Layout<'nodes, State>
impl<'nodes, State> !core::panic::unwind_safe::UnwindSafe for backer::Layout<'nodes, State>
impl<T, U> core::convert::Into<U> for backer::Layout<'nodes, State> where U: core::convert::From<T>
pub fn backer::Layout<'nodes, State>::into(self) -> U
impl<T, U> core::convert::TryFrom<U> for backer::Layout<'nodes, State> where U: core::convert::Into<T>
pub type backer::Layout<'nodes, State>::Error = core::convert::Infallible
pub fn backer::Layout<'nodes, State>::try_from(value: U) -> core::result::Result<T, <T as core::convert::TryFrom<U>>::Error>
impl<T, U> core::convert::TryInto<U> for backer::Layout<'nodes, State> where U: core::convert::TryFrom<T>
pub type backer::Layout<'nodes, State>::Error = <U as core::convert::TryFrom<T>>::Error
pub fn backer::Layout<'nodes, State>::try_into(self) -> core::result::Result<U, <U as core::convert::TryFrom<T>>::Error>
impl<T> core::any::Any for backer::Layout<'nodes, State> where T: 'static + ?core::marker::Sized
pub fn backer::Layout<'nodes, State>::type_id(&self) -> core::any::TypeId
impl<T> core::borrow::Borrow<T> for backer::Layout<'nodes, State> where T: ?core::marker::Sized
pub fn backer::Layout<'nodes, State>::borrow(&self) -> &T
impl<T> core::borrow::BorrowMut<T> for backer::Layout<'nodes, State> where T: ?core::marker::Sized
pub fn backer::Layout<'nodes, State>::borrow_mut(&mut self) -> &mut T
impl<T> core::convert::From<T> for backer::Layout<'nodes, State>
pub fn backer::Layout<'nodes, State>::from(t: T) -> T
pub struct backer::Node<'nodes, State>
impl<'nodes, State> backer::Node<'nodes, State>
pub fn backer::Node<'nodes, State>::align(self, align: backer::models::Align) -> Self
pub fn backer::Node<'nodes, State>::align_contents(self, align: backer::models::Align) -> Self
pub fn backer::Node<'nodes, State>::aspect(self, ratio: f32) -> Self
pub fn backer::Node<'nodes, State>::attach_over(self, node: Self) -> Self
pub fn backer::Node<'nodes, State>::attach_under(self, node: Self) -> Self
pub fn backer::Node<'nodes, State>::expand(self) -> Self
pub fn backer::Node<'nodes, State>::expand_x(self) -> Self
pub fn backer::Node<'nodes, State>::expand_y(self) -> Self
pub fn backer::Node<'nodes, State>::height(self, height: f32) -> Self
pub fn backer::Node<'nodes, State>::height_range<R>(self, range: R) -> Self where R: core::ops::range::RangeBounds<f32>
pub fn backer::Node<'nodes, State>::offset(self, offset_x: f32, offset_y: f32) -> backer::Node<'nodes, State>
pub fn backer::Node<'nodes, State>::offset_x(self, amount: f32) -> backer::Node<'nodes, State>
pub fn backer::Node<'nodes, State>::offset_y(self, amount: f32) -> backer::Node<'nodes, State>
pub fn backer::Node<'nodes, State>::pad(self, amount: f32) -> backer::Node<'nodes, State>
pub fn backer::Node<'nodes, State>::pad_bottom(self, amount: f32) -> backer::Node<'nodes, State>
pub fn backer::Node<'nodes, State>::pad_leading(self, amount: f32) -> backer::Node<'nodes, State>
pub fn backer::Node<'nodes, State>::pad_top(self, amount: f32) -> backer::Node<'nodes, State>
pub fn backer::Node<'nodes, State>::pad_trailing(self, amount: f32) -> backer::Node<'nodes, State>
pub fn backer::Node<'nodes, State>::pad_x(self, amount: f32) -> backer::Node<'nodes, State>
pub fn backer::Node<'nodes, State>::pad_y(self, amount: f32) -> backer::Node<'nodes, State>
pub fn backer::Node<'nodes, State>::visible(self, visibility: bool) -> Self
pub fn backer::Node<'nodes, State>::width(self, width: f32) -> Self
pub fn backer::Node<'nodes, State>::width_range<R>(self, range: R) -> Self where R: core::ops::range::RangeBounds<f32>
impl<State> backer::Node<'_, State>
pub fn backer::Node<'_, State>::dynamic_height(self, f: impl core::ops::function::Fn(f32, &mut State) -> f32 + 'static) -> Self
pub fn backer::Node<'_, State>::dynamic_width(self, f: impl core::ops::function::Fn(f32, &mut State) -> f32 + 'static) -> Self
impl<State> core::fmt::Debug for backer::Node<'_, State>
pub fn backer::Node<'_, State>::fmt(&self, f: &mut core::fmt::Formatter<'_>) -> core::fmt::Result
impl<'nodes, State> core::marker::Freeze for backer::Node<'nodes, State>
impl<'nodes, State> !core::marker::Send for backer::Node<'nodes, State>
impl<'nodes, State> !core::marker::Sync for backer::Node<'nodes, State>
impl<'nodes, State> core::marker::Unpin for backer::Node<'nodes, State>
impl<'nodes, State> !core::panic::unwind_safe::RefUnwindSafe for backer::Node<'nodes, State>
impl<'nodes, State> !core::panic::unwind_safe::UnwindSafe for backer::Node<'nodes, State>
impl<T, U> core::convert::Into<U> for backer::Node<'nodes, State> where U: core::convert::From<T>
pub fn backer::Node<'nodes, State>::into(self) -> U
impl<T, U> core::convert::TryFrom<U> for backer::Node<'nodes, State> where U: core::convert::Into<T>
pub type backer::Node<'nodes, State>::Error = core::convert::Infallible
pub fn backer::Node<'nodes, State>::try_from(value: U) -> core::result::Result<T, <T as core::convert::TryFrom<U>>::Error>
impl<T, U> core::convert::TryInto<U> for backer::Node<'nodes, State> where U: core::convert::TryFrom<T>
pub type backer::Node<'nodes, State>::Error = <U as core::convert::TryFrom<T>>::Error
pub fn backer::Node<'nodes, State>::try_into(self) -> core::result::Result<U, <U as core::convert::TryFrom<T>>::Error>
impl<T> core::any::Any for backer::Node<'nodes, State> where T: 'static + ?core::marker::Sized
pub fn backer::Node<'nodes, State>::type_id(&self) -> core::any::TypeId
impl<T> core::borrow::Borrow<T> for backer::Node<'nodes, State> where T: ?core::marker::Sized
pub fn backer::Node<'nodes, State>::borrow(&self) -> &T
impl<T> core::borrow::BorrowMut<T> for backer::Node<'nodes, State> where T: ?core::marker::Sized
pub fn backer::Node<'nodes, State>::borrow_mut(&mut self) -> &mut T
impl<T> core::convert::From<T> for backer::Node<'nodes, State>
pub fn backer::Node<'nodes, State>::from(t: T) -> T
